Better load flickering fix
(cherry picked from commit dc5d218)

--- a/src/app/lovejoy.scss
+++ b/src/app/lovejoy.scss
@@ -22,10 +22,6 @@ body {
   padding-bottom: $console-height;
 }
 
-.invisible {
-  visibility: hidden;
-}
-
 .header {
   height: $header-height;
   padding: $header-padding;
